
User-visible changes in FastRI

Since version 0.2.0 (2006-11-15)
================================
Features
--------
* fri will use a pager in full-text search mode, and also when asked to 
  (-P, -T, --[no-]pager, --pager-cmd)
* multiple queries supported:  fri upcase downcase

Since version 0.1.1 (2006-11-10)
================================
Features
--------
* fri can do full-text search (-S, --full-text); try  fri -S byte order
* fri can now determine where a method actually came from for core classes
  e.g.  fri File.inject   -> docs for Enumerable#inject
* you can specify which ports the DRb services must bind to:
    fastri-server -s 192.168.1.2:54321
    fri -s 192.168.1.2:12345
* new search methods: "anywhere" (a) and "anywhere, case-indep." (A)

Since version 0.1.0 (2006-11-08)
================================
Features
--------
* the search strategy can be specified with --order 
* added case-insensitive search strategies
* --show-matches returns a list of matching entries
* default output format defaults to 'plain' on win32

Bugfixes
--------
* the home directory is detected correctly on win32
* no more SecurityErrors due to calls to #require after $SAFE=1
* index creation doesn't bomb when RubyGems is not installed
* executables are added the .rb extension when installing on win32 with
  setup.rb