@@ -8,6 +8,7 @@ Features
 * fri will use a pager in full-text search mode, and also when asked to 
   (-P, -T, --[no-]pager, --pager-cmd)
 * multiple queries supported:  fri upcase downcase
+* fri -S is 100ms faster since it avoids requiring rubygems.rb
 
 Since version 0.1.1 (2006-11-10)
 ================================
